# Auth_service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0c3a581e375c_add_cascade_delete.py  22c403869e58_add_avatar_field_in_user_model.py  912cda45b2f1_add_new_column_to_users.py  95ba743720cc_test.py
src/: __init__.py  config.py  database.py  main.py  models.py  send_email.py
src/auth/: __init__.py  analytics_service.py  dependencies.py  encoder.py  enums.py  exceptions.py  file_service.py  kafka_producer.py  logging_conf.py  models.py  router.py  schemas.py  service.py  utils.py
src/containers/: file_config.py  kafka.py  version_config.py
src/database/: config.py  db.py  dependencies.py
src/models/: __init__.py  models.py
src/permissions/: models.py
src/repositories/: base.py  role_repository.py  uow.py  user_repository.py
src/roles/: __init__.py  models.py
src/user_permissions/: __init__.py  models.py
src/users/: __init__.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
tests/: conftest.py  test_endpoints.py  test_user_repo.py
