[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Dmitriy <pilevichdima20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = "^0.34.0"
black = "^24.10.0"
isort = "^5.13.2"
pydantic = "^2.10.4"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.0.1"
importlib-metadata = "<5.0.0"
flake8 = "^7.1.1"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
cryptography = "^44.0.0"
redis = "^5.2.1"
aiokafka = "^0.12.0"
dependency-injector = "^4.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
